<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/etregname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:hint="@string/etname"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etregemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvreg" />

    <Spinner
        android:id="@+id/spinnerregbloodgrp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:entries="@array/spinnerentries"
        android:prompt="@string/spinnerbloodgroup"
        app:layout_constraintBottom_toTopOf="@+id/btreg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etregconfirmpassword" />

    <EditText
        android:id="@+id/etregphone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:hint="@string/etphone"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/etregpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etregemail" />

    <EditText
        android:id="@+id/etregemail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:hint="@string/etemail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/etregphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etregname" />

    <EditText
        android:id="@+id/etregconfirmpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:hint="@string/etconfirmpassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/spinnerregbloodgrp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etregpassword" />

    <EditText
        android:id="@+id/etregpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:hint="@string/etpassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/etregconfirmpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etregphone" />

    <Button
        android:id="@+id/btreg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/btregistration"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerregbloodgrp" />

    <TextView
        android:id="@+id/tvreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/btregistration"
        android:textColor="@color/red"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/etregname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <ProgressBar
        android:id="@+id/pbreg"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="41dp"
        android:indeterminateTint="@color/red"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/etregpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvreglogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/btlogin"
        android:textColor="@color/red"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toEndOf="@+id/tvreg"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>